# rusty-planets

./: Cargo.toml
src/: bodies.rs  data.rs  main.rs
