[package]
name = "rusty-planets"
version = "0.1.0"
authors = ["Euan Kemp", "Billy Rhoades <me@brod.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.98.0"
nalgebra = "0.18"
rand = "0.7"
gfx = "0.18.2"
image = "0.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
